--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.13.0",
-        "material-icons": "^0.3.1",
-        "vuesax": "^3.11.13"
+        "@mdi/font": "^5.1.45",
+        "vuetify": "^2.2.27"
     }
 }
