--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.13.0",
         "@mdi/font": "^5.1.45",
+        "sweetalert2": "^9.11.0",
         "vuetify": "^2.2.27"
     }
 }
